# usds-notes

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.jupyter_user_settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
.jupyter_user_settings/jupyterlab_code_formatter/: settings.jupyterlab-settings
notebooks/: my_tasks.py  python-03--05-basic.ipynb  python-06--09-numpy.ipynb  python-10--19-pandas.ipynb  python-20--23-matplotlib.ipynb  python-24--27-seaborn.ipynb  python-28--33.ipynb  stats-02--09-descriptive-statistics.ipynb  stats-10--12-multivariate.ipynb  tmp.csv  train_w_adult.csv  util.py
