[project]
name = "usds-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"black>=26.1.0",
	"isort>=7.0.0",
	"jupyterlab>=4.0.0",
	"jupyterlab-code-formatter>=3.0.2",
	"matplotlib>=3.10.8",
	"numpy>=2.4.1",
	"pandas>=3.0.0",
	"ruff>=0.14.14",
]

[tool.uv]
managed = true
